tests/neg/missing-import.scala
class annotation extends Annotation // error
val s: String = "str"
val regex: Regex = s.r // error
